# graphql-ws

./: setup.cfg
graphql_ws/: aiohttp.py  base.py  websockets_lib.py
