
[metadata]
name = graphql-ws
version = 3.0.0b1
description = Websocket server for GraphQL subscriptions
long_description = file: README.rst, CHANGES.rst
author = Tarun Mehta
author_email = agumbe22@gmail.com
url = https://github.com/agumbe/graphql-ws
keywords = graphql, subscriptions, graphene, websockets
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    graphql-core>=3.0.0

[options.packages.find]
include =
    graphql_ws

[bdist_wheel]
universal = 1

[bumpversion]
current_version = 3.0.0b1
commit = True
tag = True

[bump2version:file:setup.cfg]
search = version="{current_version}"
replace = version="{new_version}"

[bump2version:file:graphql_ws/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[flake8]
exclude =
    .tox
    .git
    .eggs
    __pycache__
    docs
max-line-length = 88
ignore = W503

[coverage:run]
omit =
    .tox/*
